# rpa_project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  file.csv  pyproject.toml  requirements.txt
reports/: timesheet.xlsx  ~$timesheet.xlsx
server/: Dockerfile  app.js  index.js  package-lock.json  package.json
server/controllers/: schedule.js
server/models/: task.js
server/utils/: config.js  middleware.js
src/: main.py  test.py  timesheet.xlsx
src/Objects/: create_excel.py
tests/: test_rpa_project.py
